# zator

./: .gitignore  README.md  package.json
diagram/: zator_diagram.excalidraw
models/: .gitignore  gen_trace.sh  mnist.py  mnist_cnn.pt  mnist_conv.py  mnist_dense.py  pad.py  pyproject.toml  utils.py
models/json/: PADDED_trace_dim4_nlayers2.json  PAD_inp1_two_conv_mnist.json  inp1_two_conv_mnist.json  inp2_two_conv_mnist.json  trace_dim28_nlayers510.json  trace_dim4_nlayers2.json
nova/: Cargo.toml  circom_input.json
nova/circom/: Backbone.circom  Backbone1.circom  Backbone2.circom  Backbone3.circom  ConvolutionalLayer.circom  HeadLayer.circom  MiMC3D.circom  TailLayer.circom  dense_layer.circom  package.json  poseidon_constants.circom  temp.circom  utils.circom
nova/circom/out_debug/: Backbone.wasm  MiMC3D.r1cs  MiMC3D.wasm
nova/circom/tests/: Backbone  MiMC3D_smoke.json  MiMC3D_smoke.sh  backbone1_smoke_cpp.sh  backbone2_smoke_cpp.sh  backbone3_smoke_cpp.sh  backbone_smoke.json  backbone_smoke.sh  backbone_smoke_cpp.sh  cnn_smoke_test.json  cnn_smoke_test.sh  dense_smoke_test.sh  head_layer_smoke_test.json  head_layer_smoke_test.sh  smoke_test.json  smoke_test.sh  tail_layer_smoke_test.json  tail_layer_smoke_test.sh
nova/circom/utils/: Division.circom  mimcsponge.circom  utils.circom
nova/src/: bench.rs  main.rs  old_bench.rs
