[tool.poetry]
name = "zator"
version = "0.1.0"
description = "Recursively SNARK infinite depth neural nets"
authors = ["lyron, varun, verumlotus"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.8"
torch = "^1.13.1"
torchvision = "^0.14.1"
numpy = "^1.24.1"
matplotlib = "^3.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
