[package]
name = "nova"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nova-scotia = { path = "../../nova-scotia" }
nova-snark = { path = "../../nova-snark" }
num-bigint = "0.4.3"
num-traits = "0.2.15"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
